Bug 502424 - System Trays upgraded to the new nested containment system don't float when they should
Summary: System Trays upgraded to the new nested containment system don't float when t...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-04-04 19:54 UTC by Nate Graham
Modified: 2025-04-07 19:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Does not float (1.08 MB, video/mp4)
2025-04-04 19:54 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-04-04 19:54:46 UTC
Created attachment 180009 [details]
Does not float

STEPS TO REPRODUCE
1. Have an existing System Tray
2. Allow it to be upgraded to the new nested containment stuff in https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5043 at al
3. Make nothing touch your floating panel so that it floats
4. Click on anything in the System Tray


OBSERVED RESULT
The tray popup doesn't float!


EXPECTED RESULT
The tray popup floats.


ADDITIONAL INFORMATION
Every other applet popup floats appropriately when opened while its parent panel is floating.

See attached screen recording.
Comment 1 Bug Janitor Service 2025-04-07 10:00:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1297
Comment 2 Marco Martin 2025-04-07 10:15:54 UTC
Git commit 1268f879061ab421703f7c9fade6f8e0f6a9e45d by Marco Martin.
Committed on 07/04/2025 at 10:15.
Pushed by mart into branch 'master'.

Containment display hints: deduplicate changed signal

Both Applet and Containment had a containmentDisplayHintsChanged
signal with the same signature: thi was dome because on old Qt5
a signal from the superclass couldn't be used as NOTIFY, but this
brings to obscure bugs as sometimes the signal didn't make through
QML because we were connected to the "wrong" signal
Related: bug 502425

M  +0    -5    src/plasma/containment.h

https://invent.kde.org/plasma/libplasma/-/commit/1268f879061ab421703f7c9fade6f8e0f6a9e45d