Containment display hints: deduplicate changed signal

Both Applet and Containment had a containmentDisplayHintsChanged
signal with the same signature: thi was dome because on old Qt5
a signal from the superclass couldn't be used as NOTIFY, but this
brings to obscure bugs as sometimes the signal didn't make through
QML because we were connected to the "wrong" signal

BUG:502424
CCBUG:502425