src/plasma/containment.h
@@ -382,11 +382,6 @@ Q_SIGNALS:
     void formFactorChanged(Plasma::Types::FormFactor formFactor);
 
     /**
-     * Emitted when the containment disaplay hints change
-     */
-    void containmentDisplayHintsChanged(Plasma::Types::ContainmentDisplayHints hints);
-
-    /**
      * Emitted when the ui has been fully loaded and is fully working
      * @param uiReady true when the ui of the containment is ready, as well the ui of each applet in it
      */
